Fix for bug 763643 (Implement static operations and attributes for WebIDL). r=bz.